Build with Java 14 + First usage week additions